# pdf2xlsx

./: README.md  pyproject.toml
cli/: client.py  pdf2xlsx.cfe  pdf2xlsx.spec
examples/: example.py
pdf2xlsx/: extractor.py  file_handler.py  image_processor.py  post_processor.py  reader.py  table_processor.py
